--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
 
   // Play Voice - Updated to play the uploaded AI audio file
   function playVoice() {
-    const audio = new Audio('audio/I love 1.mp3');
+    const audio = new Audio('audio/I-love-1.mp3');
     audio.play().then(() => {
       // Optional: Add heartbeat sync or effects while playing
       drawHeartbeat();
